Fix flex layout broken by white-space: nowrap

--- a/styles/components/toolbar_secondary.scss
+++ b/styles/components/toolbar_secondary.scss
@@ -60,6 +60,7 @@
   &__layout-container {
     display: flex;
     align-items: center;
+    min-width: 1px; // Fixes broken flex layout due to white-space: nowrap in breadcrumbs.
     width: 100%;
     margin: 0 var(--gin-spacing-m);
 
